# coliving_bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  blabla.py  pyproject.toml  setup.cfg
.github/workflows/: code_style.yml  deploy_workflow.yml  main.yml  prod_deploy.yml  shared.yml  stage_deploy.yml  testing.yml  tests.yml
infra/: common-services.yml  default.conf  default.prod.conf  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.test.yml
requirements/: dev.txt  prod.txt
src/backend/: Dockerfile  manage.py
src/backend/api/: apps.py  constants.py
src/backend/coliving_bot/: __init__.py  asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
src/backend/coliving_bot/coliving_bot/: asgi.py  settings.py
src/backend/coliving_bot/settings/: base.py  dev.py  local.py  prod.py  stage.py
src/backend/fixtures/: locations.json  useful_info.json
src/backend/images/: admin.py  api_views.py  apps.py  constants.py  middleware.py  models.py  serializers.py  urls.py  utils.py  validators.py
src/backend/images/migrations/: 0001_initial.py  0002_alter_colivingimage_image_alter_profileimage_image.py  0003_alter_colivingimage_file_id_and_more.py  0004_alter_colivingimage_file_id_and_more.py
src/backend/mailing/: admin.py  api_views.py  constants.py  filters.py  models.py  serializers.py  urls.py
src/backend/mailing/migrations/: 0001_initial.py  0002_alter_mailing_options.py  (+5 more)
src/backend/profiles/: admin.py  api_views.py  apps.py  constants.py  filters.py  filtres.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
src/backend/search/: admin.py  apps.py  constants.py  filters.py  mixins.py  models.py  serializers.py  urls.py  views.py
src/backend/useful_info/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
src/bot/: Dockerfile  __main__.py  bot.py  run_bot.py
src/bot/conversations/: templates.py
src/bot/error_handler/: callback_funcs.py  templates.py
src/bot/general/: validators.py
src/bot/internal_requests/: __init__.py  constants.py  entities.py  exceptions.py  mock.py  service.py
src/bot/regular_tasks/: likes.py  locations.py  useful_info.py
src/bot/utils/: bot.py  config.py  configs.py  logger.py  mailing.py
(+113 files in other folders)
